[gd_scene load_steps=2 format=3 uid="uid://dul2g2ft6uy5p"]

[ext_resource type="Script" path="res://Scripts/visibibility_togle.gd" id="1_7nnvn"]

[node name="VisibilityTogle" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_7nnvn")

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(100, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 10.0
vertical_alignment = 1
autowrap_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="CheckBox" type="CheckBox" parent="CenterContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
icon_alignment = 1
expand_icon = true

[connection signal="resized" from="Label" to="." method="_on_label_resized"]
[connection signal="toggled" from="CenterContainer/MarginContainer/CheckBox" to="." method="_on_check_box_toggled"]
